# clip

./: READme.md  pyproject.toml  requirements.txt  test_conn.py
alembic/: env.py
alembic/versions/: 2df596cb072a_creating_tables.py  dcb463e26316_creating_tables_in_supabase.py
app/: database.py  main.py  oauth2.py
app/routers/: url.py  user.py
cli/: auth.py  config.py  main.py  url.py  user.py
